# EloDopamineCpp

./: .gitignore  CMakeLists.txt  EloDopamine.sln  README.md
Deployable/: SpellData.json  UnitData.json
EloDopamine/: AiManager.cpp  AiManager.h  Avareness.cpp  Avareness.h  BlockInputOrder.h  Buff.cpp  Buff.h  BuffManager.cpp  BuffManager.h  CMakeLists.txt  EloDopamine.cpp  EloDopamine.h  EloDopamine.vcxproj  EloDopamine.vcxproj.filters  Engine.cpp  Engine.h  GameData.cpp  GameData.h  GameManager.h  GameObject.cpp  GameObject.h  Hero.cpp  Hero.h  InputController.cpp  InputController.h  KeyClickOrder.h  Logger.h  Main.cpp  Math.h  MemoryManager.cpp  MemoryManager.h  Minion.cpp  Minion.h  Module.h  ModuleManager.cpp  ModuleManager.h  MouseMoveOrder.h  ObjectManager.cpp  ObjectManager.h  ObjectView.cpp  (+20 more)
EloDopamine/Core/EloDopamine/: EloDopamine.cpp  EloDopamine.h
EloDopamine/Core/Game/: Offsets.cpp  Offsets.h
EloDopamine/Core/Game/Engine/: Engine.cpp  Engine.h
EloDopamine/Core/Game/GameData/: GameData.cpp  GameData.h  Missile.cpp  Missile.h  SpellInfo.cpp  SpellInfo.h  UnitInfo.cpp  UnitInfo.h
EloDopamine/Core/Game/GameObjects/: GameObject.cpp  GameObject.h
EloDopamine/Core/Game/GameObjects/Hero/: Hero.cpp  Hero.h
EloDopamine/Core/Game/GameObjects/Hero/ActiveSpell/: ActiveSpell.cpp  ActiveSpell.h
EloDopamine/Core/Game/GameObjects/Hero/AiManager/: AiManager.cpp  AiManager.h
EloDopamine/Core/Game/GameObjects/Hero/BuffManager/: Buff.h  BuffManager.cpp  BuffManager.h
EloDopamine/Core/Game/GameObjects/Hero/SpellBook/: Spell.cpp  Spell.h
EloDopamine/Core/Game/GameObjects/Minion/: Minion.cpp  Minion.h
EloDopamine/Core/Game/InputController/: InputController.cpp  InputController.h
EloDopamine/Core/Game/InputController/Orders/: BlockInputOrder.h  KeyClickOrder.h  MouseMoveOrder.h  OrderBase.h  RightClickOrder.h  TimeoutOrder.h
EloDopamine/Core/Game/Managers/MemoryManager/: MemoryManager.cpp  MemoryManager.h
EloDopamine/Core/Game/Managers/ModuleManager/: Module.h  ModuleManager.cpp  ModuleManager.h
EloDopamine/Core/Game/Managers/ObjectManager/: ObjectManager.cpp  ObjectManager.h
EloDopamine/Core/Game/Managers/TextureManager/: TextureManager.cpp  TextureManager.h
EloDopamine/Core/Game/Renderer/: Renderer.cpp  Renderer.h
EloDopamine/Core/Game/Renderer/Overlay/: Overlay.cpp  Overlay.h
EloDopamine/Core/Math/: Vector.h
EloDopamine/Core/Utils/: KeyCodes.h  Logger.h  StringUtils.h
EloDopamine/Modules/Avareness/: Avareness.cpp  Avareness.h
EloDopamine/Modules/Evade/: EvadableSpell.h  Evade.cpp  Evade.h
EloDopamine/Modules/Evade/Helpers/: EvadeDrawings.h  SpellListingService.cpp  SpellListingService.h
EloDopamine/Modules/OrbWalker/: OrbWalker.cpp  OrbWalker.h
EloDopamine/Modules/SpellTracker/: SpellTracker.cpp  SpellTracker.h
